<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="mealVM" type="sa.com.etucook.view_models.MealViewModel"/>
        <import type="sa.com.etucook.utilities.Converter"/>
    </data>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="3"
    >

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        tools:context="sa.com.etucook.fragments.MealFragment"
                        android:layout_weight="1"
        >

            <ImageView android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:src="@drawable/meal_icon"
                       android:layout_centerInParent="true"
                       android:layout_marginTop="20dp"
            />
        </RelativeLayout>

        <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                tools:context="sa.com.etucook.fragments.MealFragment"
                android:layout_weight="2"
        >
            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@android:color/background_dark"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/meal_name_textview"
                      android:layout_marginLeft="8dp"
                      android:layout_marginStart="8dp"
                      android:layout_marginTop="13dp"
                      android:text="@string/meal_name"
                      android:textColor="@android:color/background_dark"
            />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/meal_name"
                    android:layout_toRightOf="@+id/meal_name_textview"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toEndOf="@+id/meal_name_textview"
                    android:hint="@string/name"
                    android:text="@={mealVM.meal.mealName}"
            />

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/meal_cost_textview"
                      android:layout_marginLeft="8dp"
                      android:layout_marginStart="8dp"
                      android:layout_marginTop="8dp"
                      android:layout_below="@+id/meal_name"
                      android:text="@string/meal_cost"
                      android:textColor="@android:color/background_dark"
            />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/meal_cost"
                      android:layout_toRightOf="@+id/meal_name_textview"
                      android:layout_marginStart="8dp"
                      android:layout_below="@+id/meal_name"
                      android:layout_marginEnd="8dp"
                      android:hint="@string/cost"
                      android:text="@={Converter.floatToString(mealVM.meal.mealCost)}"
                      android:layout_toEndOf="@+id/meal_name_textview"
                      android:inputType="numberDecimal|numberSigned"
            />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/meal_cost"
                        android:layout_marginTop="8dp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/show_meal_ingredients"
                        android:textColor="@android:color/background_dark"
                        android:id="@+id/text_view_recette"
                />

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="GO"
                        android:layout_below="@+id/text_view_recette"
                        android:layout_marginTop="8dp"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/button_show_ingredients"
                />
        </RelativeLayout>
    </LinearLayout>
</layout>